testsuite/tests/grammar/invalid_unparser/several-1.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Identifier(or(@Identifier | @Example))
        | Number(@Number)
    ))
}
